# kalahari

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DO_PRZECZYTANIA_JUTRO.md  Doxyfile  LICENSE  MENU.md  QT_MIGRATION_ROADMAP.md  README.md  ROADMAP.md  STRATEGIC_PLAN_PHASE0.md  STRATEGY_WORKSPACE.md  init_project.bat  init_project.py  init_project.sh  kalahari.bat  test.klh  vcpkg.json
.claude/: QUALITY_CHECKLIST.md  session-state.json  settings.json  settings.local.json  workflow.json
.serena/: project.yml
cmake/: PrecompiledHeaders.cmake  load_functions.cmake  setup.cmake  util_functions.cmake
concept_files/: Asystenci - analiza.txt  GUI_specification.md  Kalahari - koncepcja.txt  Kalahari-koncepcja-v2-bkp.md  Kalahari-koncepcja-v2.md  MENU.md  MVP_breakdown.md
docs/: plugin_api_reference.md  plugin_development_guide.md
openspec/: AGENTS.md  project.md
plugins/: hello_plugin.kplugin
project_docs/: README.md  (+20 more)
src/: CMakeLists.txt  README.md  main.cpp
src/bindings/: CMakeLists.txt  python_bindings.cpp
src/core/: art_provider.cpp  backup_manager.cpp  book.cpp  book_element.cpp  chapter_document.cpp  cmd_line_parser.cpp  database_schema_manager.cpp  diagnostic_manager.cpp  document.cpp  document_archive.cpp  event_bus.cpp  extension_points.cpp  fallback_theme.cpp  gui_log_sink.cpp  icon_registry.cpp  log_panel_sink.cpp  logger.cpp  logger.h  part.cpp  plugin_archive.cpp  plugin_manager.cpp  plugin_manifest.cpp  plugin_signature.cpp  project_database.cpp  project_lock.cpp  project_manager.cpp  python_interpreter.cpp  recent_books_manager.cpp  resource_paths.cpp  settings_manager.cpp  stylesheet.cpp  theme.cpp  theme_manager.cpp  trusted_keys.cpp
src/core/utils/: icon_downloader.cpp  svg_converter.cpp
src/editor/: book_editor.cpp  book_editor_accessible.cpp  buffer_commands.cpp  clipboard_handler.cpp  editor_appearance.cpp  editor_benchmark.cpp  editor_render_pipeline.cpp  editor_types.cpp  format_converter.cpp  format_layer.cpp  grammar_check_service.cpp  height_tree.cpp  kalahari_text_document_layout.cpp  kml_commands.cpp  kml_comment.cpp  kml_converter.cpp  kml_document.cpp  kml_document_model.cpp  kml_element.cpp  kml_format_registry.cpp  kml_inline_elements.cpp  kml_paragraph.cpp  kml_parser.cpp  kml_serializer.cpp  kml_table.cpp  kml_text_run.cpp  layout_manager.cpp  lazy_layout_manager.cpp  page_layout_manager.cpp  paragraph_layout.cpp  quick_insert_handler.cpp  quick_insert_popup.cpp  render_engine.cpp  search_engine.cpp  search_service.cpp  snapshot_manager.cpp  spell_check_service.cpp  split_editor_panel.cpp  statistics_collector.cpp  style_resolver.cpp  (+9 more)
src/gui/: appearance_settings_panel.cpp  appearance_settings_panel.h  art_provider.cpp  busy_indicator.cpp  command.cpp  command_registrar.cpp  command_registry.cpp  diagnostic_controller.cpp  dock_coordinator.cpp  document_coordinator.cpp  editor_settings_panel.cpp  editor_settings_panel.h  find_replace_bar.cpp  icon_registrar.cpp  icon_registry.cpp  kalahari_app.cpp  kalahari_app.h  kalahari_style.cpp  kalahari_syntax_highlighter.cpp  log_settings_panel.cpp  log_settings_panel.h  main_window.cpp  main_window.h  menu_builder.cpp  navigator_coordinator.cpp  perspective_manager.cpp  register_commands.hpp  settings_coordinator.cpp  settings_dialog.cpp  settings_dialog.h  shortcut_manager.cpp  theme_manager.cpp  theme_manager.h  toolbar_builder.cpp  toolbar_manager.cpp
src/gui/dialogs/: about_dialog.cpp  add_to_project_dialog.cpp  icon_downloader_dialog.cpp  item_templates.cpp  manage_perspectives_dialog.cpp  new_item_dialog.cpp  toolbar_manager_dialog.cpp
src/gui/panels/: assistant_panel.cpp  comments_panel.cpp  dashboard_panel.cpp  editor_panel.cpp  files_tab.cpp  libraries_tab.cpp  log_panel.cpp  navigator_panel.cpp  outline_tab.cpp  properties_panel.cpp  search_panel.cpp  statistics_panel.cpp  tags_panel.cpp
src/gui/utils/: layout_utils.cpp
src/gui/widgets/: color_config_widget.cpp  recent_book_card.cpp  standalone_info_bar.cpp
tests/: CMakeLists.txt  README.md  catch2_windows_compat.cpp  test_event_bus.py  test_main.cpp  test_python_bindings.py
tests/benchmarks/: benchmark_new_architecture.cpp  performance_benchmark.cpp  performance_benchmark.h  test_document_generator.cpp  test_document_generator.h
tests/core/: test_book.cpp  test_book_element.cpp  test_chapter_document.cpp  test_cmd_line_parser.cpp  test_document.cpp  test_document_archive.cpp  test_event_bus.cpp  test_extension_points.cpp  test_part.cpp  test_plugin_loading.cpp  test_plugin_manager.cpp  test_project_database.cpp  test_python_interop.cpp  test_python_interpreter.cpp  test_settings_manager.cpp  test_svg_converter.cpp  test_trusted_keys.cpp
tests/editor/: test_book_editor.cpp  test_book_editor_integration.cpp  test_buffer_commands.cpp  test_clipboard_handler.cpp  test_editor_types.cpp  test_format_converter.cpp  test_format_layer.cpp  test_grammar_check_service.cpp  test_height_tree.cpp  test_kml_converter.cpp  test_kml_document.cpp  test_kml_document_model.cpp  test_kml_element.cpp  test_kml_inline_elements.cpp  test_kml_paragraph.cpp  test_kml_parser.cpp  test_kml_serializer.cpp  test_kml_table.cpp  test_kml_text_run.cpp  test_layout_manager.cpp  test_lazy_layout_manager.cpp  test_paragraph_layout.cpp  test_render_engine.cpp  test_search_engine.cpp  test_search_service.cpp  test_snapshot_roundtrip.cpp  test_spell_check_service.cpp  test_statistics_collector.cpp  test_style_resolver.cpp  test_table_layout.cpp  test_text_buffer.cpp  test_view_modes.cpp  test_viewport_manager.cpp  test_virtual_scroll_manager.cpp  test_word_frequency_analyzer.cpp
tests/gui/: test_bwx_text_document.cpp  test_bwx_text_editor.cpp  test_bwx_text_renderer.cpp  test_command_registry.cpp  test_command_registry_execution.cpp  test_shortcut_manager.cpp
tests/prototypes/: CMakeLists.txt  benchmark_main.cpp  lazy_layout_prototype.h  piece_table_prototype.h  test_piece_table_benchmark.cpp
tests/test_support/: reset_singletons.cpp  reset_singletons.h
(+522 files in other folders)
